--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Flutter Vikings 2022 theme talk demo app
 publish_to: 'none'
 version: 1.0.0
 environment:
-  sdk: '>=2.17.0 <3.0.0'
+  sdk: '>=2.18.0-271.4.beta <3.0.0'
 
 dependencies:
   cupertino_icons: ^1.0.0
